# objprog2

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  funkcijos.cpp  funkcijos.h  generuoti.cpp  generuotif.cpp  generuotif.h  kursiokai.txt  laikas.cpp  laikas.h  lib.h  main.cpp  mišri.cpp  rezultatai.txt  skirstymas.cpp  skirstymas.h  strategija1.cpp  strategija1.h  strategija2.cpp  strategija2.h  strategija3.cpp  strategija3.h  testai.cpp  vector.cpp  zmogus.cpp  zmogus.h
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_laikas-members.html  class_laikas.html  class_laikas.js  class_laikas_a04257c2ddcfb976e2a3f1106b037f6ba_icgraph.dot  class_laikas_a97d3fa3942008539737a30a7b965dc66_icgraph.dot  class_laikas_aa7dd9dcd9c4d49854ad7e479762cadcc_cgraph.dot  class_laikas_aa7dd9dcd9c4d49854ad7e479762cadcc_icgraph.dot  class_studentas-members.html  class_studentas.html  class_studentas.js  class_studentas__coll__graph.dot  class_studentas_a00616084632943b1a0b2cdb08ac35c35_cgraph.dot  class_studentas_a00616084632943b1a0b2cdb08ac35c35_icgraph.dot  class_studentas_a00d6db6706f5e4182d3677ea4e90de61_cgraph.dot  class_studentas_a25bcc531503d3bc490dab4a656e3b8e9_cgraph.dot  class_studentas_a3d73d57245cccb84a87fff820a32f205_cgraph.dot  class_studentas_a448772adf518582b94ac0ac39e224a16_icgraph.dot  class_studentas_a56cfe16f164d76b63f50898ef0a6403a_icgraph.dot  class_studentas_a56e5236896b579708ec4828a202df274_icgraph.dot  class_zmogus-members.html  class_zmogus.html  (+95 more)
nuotraukos_ir_tyrimai/: 2strategija.txt  3strategija.txt  Pradinis testavimas.txt
(+128 files in other folders)
